# SDUFE_AI2023_NOTE

./: README.md
大一上/思想与政治/: 政治期末复习.docx  政治期末考逝考点(最终使用).xmind  政治期末考逝考点.md  政治期末考逝考点.xmind
大一上/英语/: 期末英语作文总结.xmind  英语期末复习.docx
大一下/: 心理健康期末论文.docx
大一下/Python/: 0课  Python程序设计 课程介绍.pptx  Python教学计划及章节要点(2024春).docx  山东财经大学2021-2022学年《Python程序设计》期末考试试卷（A卷）及标准答案.docx  第10课 函数的定义与调用.pptx  第11课 章节复习+函数递归.pptx  第13课 datetime库：显示日期.pptx  第1课 Python程序设计概述.pptx  第2课 程序设计基本方法.pptx  第3课 程序控制结构（分支结构）.pptx  第4课 程序控制结构（循环结构）.pptx  第5课 章节复习+程序异常处理.pptx  第6课 数据类型（数字）.pptx  第7课 数据类型（字符串）+格式化输出.pptx  第8课上课 数据类型（列表+元组）.pptx  第9课 数据类型（字典+集合）.pptx
大一下/中国共产党党史/: 2024.6中国共产党史试题.doc  2024.6党史考试示例.docx  期末考试.docx  纪念白求恩读后感.docx
大一下/人工智能导论/: 人工智能习题.doc  人工智能导论复习.docx  人工智能导论考点.docx  第1章 绪论.pptx  第2章 知识表示与知识图谱.pptx  第2章 知识表示与知识图谱（导论5）.ppt  第3章 模拟人类思维的模糊推理.pptx  第3章 确定性推理方法（导论5）.ppt  第4章 不确定性推理方法（导论5）.ppt  第4章 搜索策略.pptx  第5章 搜索求解策略（导论5）.ppt  第5章 智能计算-粒子群算法.pptx  第5章 智能计算-遗传算法.pptx  第6章 智能计算及其应用（导论5）.ppt  第7章 专家系统与机器学习.pptx  第7章 专家系统与机器学习（导论5）.ppt
大一下/大学生成长与发展/: 学业规划书.docx  指导内容（学业指导）.docx  指导内容（职业指导）.docx  新建 文本文档.txt  职业规划书.docx
大一下/大学英语II/: Text+Language enhancement+Language Practice.docx  期末考试题型.md
大一下/数据结构/: 实验一（线性表基本操作）.docx  实验三（二叉树的基本操作）.docx  实验二（栈和队列基本操作）.docx  实验四（查找）.docx  课后题(考试选择题).docx
大一下/现代史/: 现代历史.docx  (+5 more)
大二上/: 大学生发展与规划论文.doc
大二下/(55)数据机构与算法课程设计/银行管理系统/: CMakeLists.txt  branch.cpp  branch.h  category.cpp  category.h  customer.cpp  customer.h  employee.cpp  employee.h  file.cpp  file.h  main.cpp  queue.cpp  queue.h  transaction.cpp  transaction.h  utils.cpp  utils.h
(+692 files in other folders)
